Automatic Refactoring Anonymus Classes -> Lambda Organize Imports