@@ -314,7 +314,7 @@ public class UnitHolder implements Serializable {
 
         @Override
         public int compare(UnitHolder s1, UnitHolder s2) {
-            return new Double(s1.getSpeed()).compareTo(s2.getSpeed());
+            return Double.valueOf(s1.getSpeed()).compareTo(s2.getSpeed());
         }
     }
     
